# nvimx

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  PROMPT.md  README.md  config.example.toml  dist-workspace.toml  nvimx-installer.sh  nvimx_from_release.rb  nvimx_v2.rb  setup-secure-env.sh
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml  release-dist.yml  release.yml
assets/completions/: _nvimx  nvimx.bash  nvimx.fish  nvimx.zsh
docs/: CARGO_DIST_PR_PLAN.md  GUIDE.md  RELEASE_FIX_SUMMARY.md  cargo-dist-fix.patch
prompts/animation/: nvimx-readme-gif.prompt_1_1.md
prompts/images/: nvimx-hero-image.prompt.md  optimize-og.prompt.md
prompts/video/: nvimx_video-prompt.md
scripts/: validate_nvimx.sh
src/: cli.rs  main.rs
src/commands/: clean.rs  doctor.rs  install.rs  list.rs  mod.rs  registry.rs  remove.rs  run.rs  sandbox.rs  setup.rs  update.rs
src/core/: config.rs  mod.rs  output.rs  picker.rs  registry.rs  xdg.rs
src/setup/shell/: mod.rs  mod.rs.BAK
tests/: basic.rs  integration_test.rs
tests/e2e/: validate.fish  validate.sh
