[package]
name = "nvimx"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/zx0r/nvimx"
description = "Fast and flexible Neovim profile manager"
homepage = "https://github.com/zx0r/nvimx"
authors = ["zx0r <admin@zx0r.io>"]
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
keywords = ["nvimx", "nvim", "neovim", "cli", "profile-manager", "dotfiles"]

[workspace]
members = ["."]

[profile.release]
lto = true
strip = true
opt-level = "z"

# The profile that 'dist' will use to build
[profile.dist]
inherits = "release"
lto = "thin"


[[bin]]
name = "nvimx"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
which = "6"
chrono = "0.4"
clap_complete = "4.6"
semver = "1"
owo-colors = "4"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18"

[dev-dependencies]
pretty_assertions = "1.4.0"
rand = "0.9.0"
