[package]
name = "nvimx"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/zx0r/nvimx"
description = "Fast and flexible Neovim profile manager"
homepage = "https://github.com/zx0r/nvimx"
authors = ["zx0r <admin@zx0r.io>"]
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
keywords = ["nvimx", "neovim", "cli", "profile-manager", "dotfiles"]

[workspace]
members = ["."]

[profile.dev]
# level true/2 is usually overkill, cf. <https://doc.rust-lang.org/cargo/reference/profiles.html#debug>
debug = "limited"
# thin-local LTO is basically free, cf. <https://doc.rust-lang.org/cargo/reference/profiles.html#lto>
lto = false
# this speeds up xz compression etc. significantly. we could
# be more selective about which packages to optimize but :shrug:
package."*" = { opt-level = 2 }

[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[dependencies]
clap_complete = "4.6"
anyhow = "1"
thiserror = "2"
dirs = "6"
serde_json = "1"
toml = "1"
which = "8"
chrono = "0.4"
semver = "1"
owo-colors = "4"
tracing = "0.1"
indicatif = "0.18"
ureq = { version = "3", features = ["json"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tracing-subscriber = { version = "0.3", features =["env-filter"] }

[dev-dependencies]
pretty_assertions = "1" 
rand = "0.9"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
pre-release-commit-message = "release: {{version}}"
publish = false


